moveChunk with `waitForDelete` doesn't wait for majority write concern

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Sharding 2018-09-24
    • 30
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This leads to the problem described in detail in BF-6920.

      I propose simply adding a waitForWriteConcern to moveChunk before the scoped registered migration object goes out of scope.

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Dianna Hohensee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: