SERVER-31892 moveChunk with  should wait for majority write concern

(cherry picked from commit 07ecc05d44c2a4f443bccf96004a1da16b2e3984)