src/mongo/db/s/move_chunk_command.cpp
@@ -63,6 +63,15 @@ void uassertStatusOKWithWarning(const Status& status) {
     }
 }
 
+const WriteConcernOptions kMajorityWriteConcern(WriteConcernOptions::kMajority,
+                                                // Note: Even though we're setting UNSET here,
+                                                // kMajority implies JOURNAL if journaling is
+                                                // supported by mongod and
+                                                // writeConcernMajorityJournalDefault is set to true
+                                                // in the ReplSetConfig.
+                                                WriteConcernOptions::SyncMode::UNSET,
+                                                -1);
+
 // Tests can pause and resume moveChunk's progress at each step by enabling/disabling each failpoint
 MONGO_FP_DECLARE(moveChunkHangAtStep1);
 MONGO_FP_DECLARE(moveChunkHangAtStep2);
@@ -163,7 +172,19 @@ public:
             // OperationContext.
             // TODO (SERVER-30183): If this moveChunk joined an active moveChunk that did not have
             // waitForDelete=true, the captured opTime may not reflect all the deletes.
-            repl::ReplClientInfo::forClient(opCtx->getClient()).setLastOpToSystemLastOpTime(opCtx);
+            auto& replClient = repl::ReplClientInfo::forClient(opCtx->getClient());
+            replClient.setLastOpToSystemLastOpTime(opCtx);
+
+            WriteConcernResult writeConcernResult;
+            writeConcernResult.wTimedOut = false;
+            Status majorityStatus = waitForWriteConcern(
+                opCtx, replClient.getLastOp(), kMajorityWriteConcern, &writeConcernResult);
+            if (!majorityStatus.isOK()) {
+                if (!writeConcernResult.wTimedOut) {
+                    uassertStatusOK(majorityStatus);
+                }
+                return false;
+            }
         }
 
         return true;
